--- a/index.html
+++ b/index.html
@@ -20,27 +20,27 @@
     <h2>Nuestros Servicios</h2>
     <div class="cards-container">
       <div class="card">
-        <img src="img/marcha.jpeg" alt="Reparación de Marchas" />
+        <img src="marcha.jpeg" alt="Reparación de Marchas" />
         <h3>Marchas</h3>
       </div>
       <div class="card">
-        <img src="img/alternador.jpg" alt="Reparación de Alternadores" />
+        <img src="alternador.jpg" alt="Reparación de Alternadores" />
         <h3>Alternadores</h3>
       </div>
       <div class="card">
-        <img src="img/bateria.png" alt="Carga de baterías" />
+        <img src="bateria.png" alt="Carga de baterías" />
         <h3>Carga de Baterías</h3>
       </div>
       <div class="card">
-        <img src="img/luces.png" alt="Luces automotrices" />
+        <img src="luces.png" alt="Luces automotrices" />
         <h3>Luces en General</h3>
       </div>
       <div class="card">
-        <img src="img/escaneo.jpeg" alt="Escaneo avanzado" />
+        <img src="escaneo.jpeg" alt="Escaneo avanzado" />
         <h3>Escaneo Avanzado</h3>
       </div>
       <div class="card">
-        <img src="img/instalacion.jpeg" alt="Reparación de instalaciones" />
+        <img src="instalacion.jpeg" alt="Reparación de instalaciones" />
         <h3>Instalaciones Automotrices</h3>
       </div>
     </div>
