Ajustes de mapas y estructura

--- a/index.html
+++ b/index.html
@@ -20,45 +20,48 @@
     <h2>Nuestros Servicios</h2>
     <div class="cards-container">
       <div class="card">
-        <img src="marcha.jpeg" alt="Reparación de Marchas" />
+        <img src="/img/marcha.jpeg" alt="Reparación de Marchas" />
         <h3>Marchas</h3>
       </div>
       <div class="card">
-        <img src="alternador.jpg" alt="Reparación de Alternadores" />
+        <img src="/img/alternador.jpg" alt="Reparación de Alternadores" />
         <h3>Alternadores</h3>
       </div>
       <div class="card">
-        <img src="bateria.png" alt="Carga de baterías" />
+        <img src="/img/bateria.png" alt="Carga de baterías" />
         <h3>Carga de Baterías</h3>
       </div>
       <div class="card">
-        <img src="luces.png" alt="Luces automotrices" />
+        <img src="/img/luces.png" alt="Luces automotrices" />
         <h3>Luces en General</h3>
       </div>
       <div class="card">
-        <img src="escaneo.jpeg" alt="Escaneo avanzado" />
+        <img src="/img/escaneo.jpeg" alt="Escaneo avanzado" />
         <h3>Escaneo Avanzado</h3>
       </div>
       <div class="card">
-        <img src="instalacion.jpeg" alt="Reparación de instalaciones" />
+        <img src="/img/instalacion.jpeg" alt="Reparación de instalaciones" />
         <h3>Instalaciones Automotrices</h3>
       </div>
     </div>
   </section>
 
+ 
   <!-- Contacto -->
   <section class="contacto">
     <h2>Ubicación y Horarios</h2>
     <div class="mapa-horario">
+      <a href="https://maps.app.goo.gl/p5aGaftPNfLuhH5u9" target="_blank" style="display: block; position: relative;"></a>
       <iframe 
-        src="https://www.google.com/maps?q=Rtno.+Jos%C3%A9+Mar%C3%ADa+Izazaga,+La+Huerta,+58048+Morelia,+Mich.&output=embed"
+        src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d7512.961558077548!2d-101.213761!3d19.692145!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6703c32851cc849f%3A0x27be1421123f2abf!2sAutoelectrico%20Moreno!5e0!3m2!1ses-419!2sus!4v1755309867223!5m2!1ses-419!2sus"
         allowfullscreen
         loading="lazy"
         referrerpolicy="no-referrer-when-downgrade">
       </iframe>
+      </a>
       <div class="horario">
         <h3>Horario</h3>
-        <p>Lunes a Sábado<br>9:00 AM - 8:00 PM</p>
+        <p>Lunes a Sábado<br>9:00 AM - 8:00 PM <br> Cotiza precios en nuestra página <br> en <a href="https://www.facebook.com/share/19iMCqnQzy/" target="_blank">Facebook</a> o <a href="https://wa.me/4434030527" target="_blank">WhatsApp</a></p>
       </div>
     </div>
   </section>
