Cambio de etiqueta de titulo para mejor ubicación

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- Hero -->
   <header class="hero">
     <div class="hero-overlay">
-      <h1>Servicio Autoeléctrico en Morelia</h1>
+      <h1>Auto Eléctrico en Morelia – Servicio Autoeléctrico Moreno</h1>
       <p>Especialistas en Marchas, Alternadores, Escaneo y más</p>
     </div>
   </header>
